Prevent a crash when no account was selected in the Add Contact dialog or when the connection() of that account is null.

BUG: 278757